# urchin

./: Doxygen  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.in  libtool
app/Fxist/: AnalyzerOptionDlg.cpp  AnalyzerOptionDlg.h  ChildDialog.cpp  ChildDialog.h  CollectionCfgDlg.cpp  CollectionCfgDlg.h  CreateFXCollectionDlg.cpp  CreateFXCollectionDlg.h  CreateStopFileDlg.cpp  CreateStopFileDlg.h  DocumentsDlg.cpp  DocumentsDlg.h  Fxist.cpp  Fxist.h  Fxist.rc  FxistDoc.cpp  FxistDoc.h  FxistView.cpp  FxistView.h  Fxist_7.1.vcproj  Fxist_8.0.vcproj  HierMergeAdvanceDlg.cpp  HierMergeAdvanceDlg.h  IndexMaintainDlg.cpp  IndexMaintainDlg.h  IndexingDlg.cpp  IndexingDlg.h  IndexingProgressDlg.cpp  IndexingProgressDlg.h  LogDlg.cpp  LogDlg.h  LogOptionDlg.cpp  LogOptionDlg.h  MainFrm.cpp  MainFrm.h  Makefile  Makefile.am  Makefile.in  OverviewDlg.cpp  OverviewDlg.h  (+18 more)
app/Fxist/res/: Fxist.manifest  Fxist.rc2
app/fxist4c/: Makefile  Makefile.am  Makefile.in  main.cpp
app/fxist4c/.deps/: main.Po
bin_release/: Makefile  Makefile.am  Makefile.in  config.xml
bin_release/plugins/: plugins.xml
contrib/snowball/: Makefile  Makefile.am  Makefile.in
contrib/snowball/.deps/: libsnowball_a-SnowballFilter.Po  libsnowball_a-SnowballWrapper.Po  libsnowball_a-api.Po  libsnowball_a-libstemmer.Po  libsnowball_a-stem_ISO_8859_1_danish.Po  libsnowball_a-stem_ISO_8859_1_dutch.Po  libsnowball_a-stem_ISO_8859_1_english.Po  libsnowball_a-stem_ISO_8859_1_finnish.Po  libsnowball_a-stem_ISO_8859_1_french.Po  libsnowball_a-stem_ISO_8859_1_german.Po  libsnowball_a-stem_ISO_8859_1_hungarian.Po  libsnowball_a-stem_ISO_8859_1_italian.Po  libsnowball_a-stem_ISO_8859_1_norwegian.Po  libsnowball_a-utilities.Po  (+19 more)
plugins/HTMLParserPlugin/: HTMLParserPlugin.cpp  HTMLParserPlugin.def  HTMLParserPlugin.h  HTMLParserPluginFactory.cpp  HTMLParserPlugin_7.1.vcproj  HTMLParserPlugin_8.0.vcproj  HtmlTextStripper.cpp  HtmlTextStripper.h  Makefile  Makefile.am  Makefile.in  main.cpp
src/: Makefile  Makefile.am  Makefile.in
src/.deps/: libcom_a-Com.Po  libcom_a-_bstr.Po  libcom_a-bstr.Po  libcom_a-compobj.Po  libcom_a-createinstance.Po  libcom_a-database.Po  libcom_a-dllregisterserver.Po  libcom_a-dllserver.Po  libcom_a-errorinfo.Po  libcom_a-git.Po  libcom_a-guid.Po  libcom_a-iid_cpp.Po  libcom_a-inproc32.Po  libcom_a-loadlibrary.Po  libcom_a-log.Po  libcom_a-malloc.Po  libcom_a-marshal.Po  libcom_a-registered_class_objects.Po  libcom_a-string.Po  libcom_a-thread.Po  libcom_a-zstr.Po  libfirtex_a-Analyzer.Po  libfirtex_a-AnalyzerFactory.Po  libfirtex_a-AnalyzerPlugins.Po  libfirtex_a-BarrelTermDocFreqs.Po  libfirtex_a-BarrelTermPositions.Po  libfirtex_a-BarrelsInfo.Po  libfirtex_a-BitVector.Po  libfirtex_a-BooleanQuery.Po  libfirtex_a-BooleanScorer.Po  libfirtex_a-Collection.Po  libfirtex_a-CollectionFactory.Po  libfirtex_a-Com.Po  libfirtex_a-ComDocument.Po  libfirtex_a-ComDocumentInput.Po  libfirtex_a-ComDocumentSchema.Po  libfirtex_a-ComObject.Po  libfirtex_a-ComReader.Po  libfirtex_a-ComTokens.Po  libfirtex_a-Config.Po  (+163 more)
src/analyzer/: Analyzer.cpp  AnalyzerFactory.cpp  DateTimeAnalyzer.cpp  DictionaryImporter.cpp  LowercaseAnteFilter.cpp  Makefile.am  NumericAnalyzer.cpp  StandardAnalyzer.cpp  StandardStopFilter.cpp  Tokens.cpp
src/collection/: Collection.cpp  CollectionFactory.cpp  DirCollection.cpp  FileListCollection.cpp  FirteXCollection.cpp  GZTWCollection.cpp  GZTrecCollection.cpp  Makefile.am  TWCollection.cpp  TrecCollection.cpp  ZIPTrecCollection.cpp
src/com/: Makefile.am  bstr.cpp  iid_c.c  iid_cpp.cpp
src/config/: Makefile.am
src/document/: Document.cpp  DocumentSchema.cpp  Field.cpp  Makefile.am
src/index/: BarrelTermDocFreqs.cpp  BarrelTermPositions.cpp  BarrelsInfo.cpp  DBTIndexMerger.cpp  DateTimeFactory.cpp  DateTimeIndexer.cpp  DateTimeMerger.cpp  DateTimeTermIterator.cpp  DateTimeTermReader.cpp  DateTimeTermReaderImpl.cpp  DictHashFactory.cpp  DictHashFreqVector.cpp  DictHashIndexer.cpp  DictHashMerger.cpp  DictHashPositionVector.cpp  DictHashSequenceVector.cpp  DictHashTermIterator.cpp  DictHashTermReader.cpp  DictHashTermReaderImpl.cpp  FieldFactory.cpp  FieldMerger.cpp  FieldsInfo.cpp  ForwardIndexReader.cpp  ForwardIndexWriter.cpp  GPIndexMerger.cpp  ImmediateMerger.cpp  InMemoryIndexBarrelReader.cpp  Index.cpp  IndexBarrelReader.cpp  IndexBarrelWriter.cpp  IndexMerger.cpp  IndexReader.cpp  IndexWriter.cpp  InputDescriptor.cpp  LogarithmicMerger.cpp  Makefile.am  MultiFieldTermReader.cpp  MultiForwardIndexReader.cpp  MultiIndexBarrelReader.cpp  MultiTermDocs.cpp  (+16 more)
src/parser/: HTMLParser.cpp  Makefile.am  Parser.cpp  ParserFactory.cpp  PlainParser.cpp
src/plugin/: AnalyzerPlugins.cpp  ComDocument.cpp  ComDocumentInput.cpp  ComDocumentSchema.cpp  ComObject.cpp  ComReader.cpp  ComTokens.cpp  FirteXCOM.cpp  Makefile.am  ParserPlugins.cpp  Plugins.cpp
src/search/: BooleanQuery.cpp  BooleanScorer.cpp  ConjunctionScorer.cpp  DefaultSimilarity.cpp  DisjunctionScorer.cpp  HitCollector.cpp  HitQueue.cpp  IndexSearcher.cpp  Lexer.cpp  Makefile.am  PhraseQuery.cpp  PhraseScorer.cpp  Query.cpp  QueryHits.cpp  QueryParser.cpp  QueryToken.cpp  RangeQuery.cpp  ReqOptScorer.cpp  ReqProhScorer.cpp  Searcher.cpp  Similarity.cpp  Sort.cpp  SortFieldCache.cpp  SortFieldCacheImpl.cpp  SortFieldComparator.cpp  TermQuery.cpp  TermScorer.cpp  TokenList.cpp
src/store/: FSDirectory.cpp  FSIndexInput.cpp  IndexInput.cpp  IndexOutput.cpp  MMapIndexInput.cpp  Makefile.am  RAMDirectory.cpp
src/thread/: Makefile.am  ThreadPool.cpp
src/utility/: BitVector.cpp  Config.cpp  Configurator.cpp  DateTime.cpp  Exception.cpp  FastCharStream.cpp  FileReader.cpp  MMapFile.cpp  Makefile.am  Misc.cpp  ParamParser.cpp  Reader.cpp  SpeedProbe.cpp  Starter.cpp  StringUtils.cpp  XML.cpp  ZIPFile.cpp  ZLib.cpp  dirent.cpp  logger.cpp  platform.cpp
win32/: All-Inclusive_7.1.sln  All-Inclusive_8.0.sln  FirteX_7.1.sln  FirteX_7.1.vcproj  FirteX_8.0.sln  FirteX_8.0.vcproj  Makefile  Makefile.am  Makefile.in  com_7.1.vcproj  com_8.0.vcproj  fxist4c_7.1.vcproj  fxist4c_8.0.vcproj
(+295 files in other folders)
