# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs

firtexdatadir=$(bindir)/data
firtexpluginsdir=$(bindir)/plugins
firtexconfigdir = $(bindir)

firtexdata_DATA = data/coredict.pdat\
		     data/stopword.stf
firtexplugins_DATA = plugins/plugins.xml
firtexconfig_DATA = config.xml

EXTRA_DIST = \
	config.xml\
	plugins/plugins.xml\
	data/coredict.pdat\
	data/stopword.stf
	
