# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs

EXTRA_DIST = \
	com_7.1.vcproj\
	FirteX_7.1.vcproj\
	FirteX_7.1.sln\
	ReadMe.txt\
	FirteX_7.1.suo\
	fxist4c_7.1.vcproj\
	com_8.0.vcproj\
	FirteX_8.0.vcproj\
	FirteX_8.0.sln\
	FirteX_8.0.suo\
	fxist4c_8.0.vcproj\
	All-Inclusive_7.1.sln\
	All-Inclusive_8.0.sln
