## Makefile.am -- Process this file with automake to produce Makefile.in

INCLUDES 			= -I../../include -I./include -I./src/stemmer
noinst_LIBRARIES	= libsnowball.a

libsnowball_a_SOURCES  = include/*.h
libsnowball_a_SOURCES  += src/SnowballFilter.cpp
libsnowball_a_SOURCES  += src/SnowballWrapper.cpp
libsnowball_a_SOURCES  += src/stemmer/include/libstemmer.h
libsnowball_a_SOURCES  += src/stemmer/libstemmer/modules.h
libsnowball_a_SOURCES  += src/stemmer/libstemmer/libstemmer.c
libsnowball_a_SOURCES  += src/stemmer/runtime/api.h
libsnowball_a_SOURCES  += src/stemmer/runtime/header.h
libsnowball_a_SOURCES  += src/stemmer/runtime/api.c
libsnowball_a_SOURCES  += src/stemmer/runtime/utilities.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_danish.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_porter.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_german.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_danish.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_portuguese.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_german.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_dutch.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_portuguese.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_hungarian.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_dutch.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_spanish.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_hungarian.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_english.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_spanish.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_italian.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_english.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_swedish.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_italian.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_finnish.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_swedish.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_norwegian.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_finnish.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_KOI8_R_russian.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_norwegian.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_french.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_KOI8_R_russian.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_porter.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_french.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_danish.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_porter.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_german.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_danish.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_portuguese.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_german.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_dutch.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_portuguese.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_hungarian.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_dutch.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_russian.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_hungarian.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_english.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_russian.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_italian.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_english.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_spanish.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_italian.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_finnish.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_spanish.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_norwegian.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_finnish.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_swedish.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_norwegian.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_french.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_swedish.h
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_ISO_8859_1_porter.c
libsnowball_a_SOURCES  += src/stemmer/src_c/stem_UTF_8_french.h

EXTRA_DIST = \
	src/stemmer/libstemmer/*.txt\
	SWord.txt
	


libsnowball_a_CXXFLAGS = @CXXFLAGS@ -fPIC -shared
libsnowball_a_CFLAGS = @CFLAGS@ -fPIC -shared


