## Makefile.am -- Process this file with automake to produce Makefile.in
analyzer_srcdir 	= $(fsrcdir)/analyzer
libfirtex_a_SOURCES  += $(fincdir)/analyzer/*.h
libfirtex_a_SOURCES  += $(analyzer_srcdir)/Analyzer.cpp
libfirtex_a_SOURCES  += $(analyzer_srcdir)/AnalyzerFactory.cpp
libfirtex_a_SOURCES  += $(analyzer_srcdir)/DateTimeAnalyzer.cpp
libfirtex_a_SOURCES  += $(analyzer_srcdir)/NumericAnalyzer.cpp
libfirtex_a_SOURCES  += $(analyzer_srcdir)/LowercaseAnteFilter.cpp
libfirtex_a_SOURCES  += $(analyzer_srcdir)/StandardAnalyzer.cpp
libfirtex_a_SOURCES  += $(analyzer_srcdir)/StandardStopFilter.cpp
libfirtex_a_SOURCES  += $(analyzer_srcdir)/DictionaryImporter.cpp
libfirtex_a_SOURCES  += $(analyzer_srcdir)/Tokens.cpp


