## Makefile.am -- Process this file with automake to produce Makefile.in
collection_srcdir	= $(fsrcdir)/collection
libfirtex_a_SOURCES  += $(fincdir)/collection/*.h
libfirtex_a_SOURCES  += $(collection_srcdir)/Collection.cpp
libfirtex_a_SOURCES  += $(collection_srcdir)/CollectionFactory.cpp
libfirtex_a_SOURCES  += $(collection_srcdir)/DirCollection.cpp
libfirtex_a_SOURCES  += $(collection_srcdir)/FileListCollection.cpp
libfirtex_a_SOURCES  += $(collection_srcdir)/FirteXCollection.cpp
libfirtex_a_SOURCES  += $(collection_srcdir)/TrecCollection.cpp
libfirtex_a_SOURCES  += $(collection_srcdir)/GZTrecCollection.cpp
libfirtex_a_SOURCES  += $(collection_srcdir)/ZIPTrecCollection.cpp
libfirtex_a_SOURCES  += $(collection_srcdir)/TWCollection.cpp
libfirtex_a_SOURCES  += $(collection_srcdir)/GZTWCollection.cpp


