## Makefile.am -- Process this file with automake to produce Makefile.in
document_srcdir 		= $(fsrcdir)/document
libfirtex_a_SOURCES  += $(fincdir)/document/*.h
libfirtex_a_SOURCES  += $(document_srcdir)/Document.cpp
libfirtex_a_SOURCES  += $(document_srcdir)/DocumentSchema.cpp
libfirtex_a_SOURCES  += $(document_srcdir)/Field.cpp

