## Makefile.am -- Process this file with automake to produce Makefile.in
index_srcdir 				= $(fsrcdir)/index
libfirtex_a_SOURCES  += $(fincdir)/index/*.h
libfirtex_a_SOURCES  += $(index_srcdir)/BarrelsInfo.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/BarrelTermDocFreqs.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/BarrelTermPositions.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/DateTimeIndexer.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/DateTimeMerger.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/DateTimeTermIterator.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/DateTimeTermReader.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/DateTimeTermReaderImpl.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/DateTimeFactory.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/DictHashFactory.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/DictHashFreqVector.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/DictHashIndexer.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/DictHashMerger.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/DictHashPositionVector.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/DictHashSequenceVector.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/DictHashTermIterator.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/DictHashTermReader.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/DictHashTermReaderImpl.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/FieldFactory.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/FieldMerger.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/FieldsInfo.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/GPIndexMerger.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/DBTIndexMerger.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/ImmediateMerger.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/Index.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/IndexBarrelWriter.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/IndexBarrelReader.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/IndexMerger.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/IndexReader.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/IndexWriter.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/InMemoryIndexBarrelReader.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/InputDescriptor.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/LogarithmicMerger.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/MultiFieldTermReader.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/MultiIndexBarrelReader.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/MultiTermDocs.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/MultiTermIterator.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/MultiTermPositions.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/MultiTermReader.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/MultiForwardIndexReader.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/NormBytes.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/NormsReader.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/NormsWriter.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/OptimizeMerger.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/OutputDescriptor.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/Posting.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/PostingMerger.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/SingleIndexBarrelReader.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/StoredFieldsReader.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/StoredFieldsWriter.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/Term.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/TermIterator.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/TermReader.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/ForwardIndexReader.cpp
libfirtex_a_SOURCES  += $(index_srcdir)/ForwardIndexWriter.cpp
