## Makefile.am -- Process this file with automake to produce Makefile.in
parser_srcdir				= $(fsrcdir)/parser
libfirtex_a_SOURCES  += $(fincdir)/parser/*.h
libfirtex_a_SOURCES  += $(parser_srcdir)/Parser.cpp
libfirtex_a_SOURCES  += $(parser_srcdir)/ParserFactory.cpp
libfirtex_a_SOURCES  += $(parser_srcdir)/PlainParser.cpp
libfirtex_a_SOURCES  += $(parser_srcdir)/HTMLParser.cpp


