## Makefile.am -- Process this file with automake to produce Makefile.in
plugin_srcdir				= $(fsrcdir)/plugin
libfirtex_a_SOURCES  += $(fincdir)/plugin/*.h
libfirtex_a_SOURCES  += $(plugin_srcdir)/ComObject.cpp
libfirtex_a_SOURCES  += $(plugin_srcdir)/ParserPlugins.cpp
libfirtex_a_SOURCES  += $(plugin_srcdir)/AnalyzerPlugins.cpp
libfirtex_a_SOURCES  += $(plugin_srcdir)/ComReader.cpp
libfirtex_a_SOURCES  += $(plugin_srcdir)/Plugins.cpp
libfirtex_a_SOURCES  += $(plugin_srcdir)/ComDocument.cpp
libfirtex_a_SOURCES  += $(plugin_srcdir)/ComTokens.cpp
libfirtex_a_SOURCES  += $(plugin_srcdir)/ComDocumentSchema.cpp
libfirtex_a_SOURCES  += $(plugin_srcdir)/ComDocumentInput.cpp
libfirtex_a_SOURCES  += $(plugin_srcdir)/FirteXCOM.cpp
