## Makefile.am -- Process this file with automake to produce Makefile.in
search_srcdir 			= $(fsrcdir)/search
libfirtex_a_SOURCES  += $(fincdir)/search/*.h
libfirtex_a_SOURCES  += $(search_srcdir)/Sort.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/PhraseQuery.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/SortFieldCache.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/BooleanQuery.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/PhraseScorer.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/SortFieldCacheImpl.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/BooleanScorer.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/Query.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/SortFieldComparator.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/ConjunctionScorer.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/QueryHits.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/TermQuery.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/DefaultSimilarity.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/QueryParser.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/TermScorer.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/DisjunctionScorer.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/QueryToken.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/HitCollector.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/RangeQuery.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/TokenList.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/HitQueue.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/ReqOptScorer.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/Searcher.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/IndexSearcher.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/ReqProhScorer.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/Lexer.cpp
libfirtex_a_SOURCES  += $(search_srcdir)/Similarity.cpp


