## Makefile.am -- Process this file with automake to produce Makefile.in
store_srcdir				= $(fsrcdir)/store
libfirtex_a_SOURCES  += $(fincdir)/store/*.h
libfirtex_a_SOURCES  += $(store_srcdir)/FSDirectory.cpp
libfirtex_a_SOURCES  += $(store_srcdir)/IndexInput.cpp
libfirtex_a_SOURCES  += $(store_srcdir)/FSIndexInput.cpp
libfirtex_a_SOURCES  += $(store_srcdir)/IndexOutput.cpp
libfirtex_a_SOURCES  += $(store_srcdir)/RAMDirectory.cpp
libfirtex_a_SOURCES  += $(store_srcdir)/MMapIndexInput.cpp
