## Makefile.am -- Process this file with automake to produce Makefile.in
thread_srcdir			= $(fsrcdir)/thread
libfirtex_a_SOURCES  += $(fincdir)/thread/*.h
libfirtex_a_SOURCES  += $(fincdir)/thread/linux/*.h
libfirtex_a_SOURCES  += $(fincdir)/thread/win32/*.h
libfirtex_a_SOURCES  += $(thread_srcdir)/ThreadPool.cpp


	
