## Makefile.am -- Process this file with automake to produce Makefile.in
utility_srcdir			=	$(fsrcdir)/utility
libfirtex_a_SOURCES  += $(fincdir)/utility/*.h
libfirtex_a_SOURCES  += $(fincdir)/utility/*.inl
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/*.h
libfirtex_a_SOURCES  += $(utility_srcdir)/platform.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/Exception.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/SpeedProbe.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/FastCharStream.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/ParamParser.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/Configurator.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/Starter.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/FileReader.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/XML.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/BitVector.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/logger.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/Config.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/ZLib.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/ZIPFile.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/DateTime.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/Misc.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/dirent.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/Reader.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/StringUtils.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/MMapFile.cpp
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/deflate.c
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/inflate.c
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/uncompr.c
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/adler32.c
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/infback.c
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/inftrees.c
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/compress.c
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/inffast.c
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/crc32.c
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/trees.c
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/gvmat32.asm
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/gvmat32c.c
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/gzio.c
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/inffas32.asm
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/ioapi.c
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/uncompr.c
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/unzip.c
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/zip.c
libfirtex_a_SOURCES  += $(utility_srcdir)/zlib/zutil.c 

EXTRA_DIST += $(utility_srcdir)/zlib/iowin32.c
